style.css
*{
    box-sizing: border-box;
}
body{
    height: 100vh;
}
h1{
    font-size: 2rem;
    margin:1rem;
}
ul{
    padding:0px;
}
.logo{
    width:70px;
}
.container{
    width: 100%;
    text-align: center;
    margin:0 auto;
    min-width:320px;
}
#searchArea{
    display: flex;
    flex-direction: column;
}
#songSearch{
   padding: 10px;
   border-top:none;
   border-left:none;
   border-right:none;
   font-size:24px;
}
#searchLyrics{
    margin-top: 10px;
    padding: 10px;
    font-size:24px;
    align-self: center;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    background-color: #c8e6f5;
}
#searchLyrics:hover{
    background-color: #5ca0d3;
}
#spinner{
    background: transparent;
    width:50px;
    height: 50px;
    margin: 0 auto;
}
#songInfo{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
}
#songInfo li{
    list-style: none;
    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.41);
    border-radius: 10px;
    overflow: hidden;
    background: white;
    margin:10px auto;
    display: flex;
    padding:10px;
    flex-direction: column;
    justify-content: space-between;
}
.music-info{
    min-width:250px;
    width:300px;
    min-height: 200px;
}
#songInfo li button{
    font-size:18px;
    border:none;
    padding: 5px;
    background-color: black;
    color: white;
    cursor: pointer;
    width: 100%;
}
.music-info{
    display: inline-block;
}
.hidden{
    display: none;
}
.error{
    color:red;
    font-size: 18px;
}
.lyrics-info{
    width:100%;
    font-size: 18px;
}
.yt-player{  
    position:relative;
    padding-bottom:36.25%;
    padding-top:30px;
    overflow:hidden;
}
.yt-player iframe,
.yt-player object,
.yt-player embed {
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}
#lyrics_text{
    white-space: pre-wrap;
}
footer {
    text-align: center;
    margin-top: 20px;
    font-size: 20px;
    padding: 10px 0px;
}
@media all and (min-width:450px){
    h1{
        font-size: 2.5rem;
    }
    .logo{
        width: 90px
    }
    .container{
        width: 90%;
    }
    #songInfo{
        flex-direction: row;
    }
    .lyrics-info{
        font-size: 20px;
    }
    .yt-player{
        padding-bottom:46.25%;
    }
    .yt-player iframe,
    .yt-player object,
    .yt-player embed {
        width:90%;
        left:5%;
    }
}
@media all and (min-width:850px){
    h1{
        font-size: 3rem;
    }
    .logo{
        width: 120px;
    }
    .container{
        width: 90%;
    }
    .lyrics-info{
        font-size: 22px;
    }
    .yt-player{
        padding-bottom:36.25%;
    }
    .yt-player iframe,
    .yt-player object,
    .yt-player embed {
        width:70%;
        left: 15%;
    }
}

